--- a/app/src/main/res/layout/fragment_food_joke.xml
+++ b/app/src/main/res/layout/fragment_food_joke.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/lightGray"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".FoodJokeFragment">
+    tools:context=".ui.fragments.FoodJokeFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
