--- a/app/src/main/res/layout/fragment_recipes.xml
+++ b/app/src/main/res/layout/fragment_recipes.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@color/lightGray"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".RecipesFragment">
+    tools:context=".ui.fragments.RecipesFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <com.todkars.shimmer.ShimmerRecyclerView
