--- a/app/src/main/res/layout/fragment_favorite_recipes.xml
+++ b/app/src/main/res/layout/fragment_favorite_recipes.xml
@@ -8,13 +8,38 @@
     tools:context=".ui.fragments.FavoriteRecipesFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/list_favorite_recipe"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Favorite Recipes"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        android:visibility="invisible"/>
+
+    <ImageView
+        android:id="@+id/img_no_fav_recipe"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:alpha="0.5"
+        android:src="@drawable/ic_menu_book"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="0.37"/>
+    <TextView
+        android:id="@+id/txt_no_favorited"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="No Favorite Recipes Yet"
+        app:layout_constraintStart_toStartOf="@id/img_no_fav_recipe"
+        app:layout_constraintEnd_toEndOf="@id/img_no_fav_recipe"
+        app:layout_constraintTop_toBottomOf="@id/img_no_fav_recipe"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
