--- a/app/src/main/res/layout/fragment_favorite_recipes.xml
+++ b/app/src/main/res/layout/fragment_favorite_recipes.xml
@@ -31,7 +31,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.37"/>
+        app:layout_constraintVertical_bias="0.37"
+        android:visibility="visible"/>
     <TextView
         android:id="@+id/txt_no_favorited"
         android:layout_width="wrap_content"
@@ -40,6 +41,7 @@
         android:text="No Favorite Recipes Yet"
         app:layout_constraintStart_toStartOf="@id/img_no_fav_recipe"
         app:layout_constraintEnd_toEndOf="@id/img_no_fav_recipe"
-        app:layout_constraintTop_toBottomOf="@id/img_no_fav_recipe"/>
+        app:layout_constraintTop_toBottomOf="@id/img_no_fav_recipe"
+        android:visibility="visible"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
