--- a/app/src/main/res/layout/item_recipes_favorite.xml
+++ b/app/src/main/res/layout/item_recipes_favorite.xml
@@ -153,7 +153,7 @@
                     app:layout_constraintStart_toEndOf="@id/clock_txt_value_fav"
                     app:layout_constraintTop_toBottomOf="@id/img_leaf_fav"
                     android:textAlignment="center"
-                    tools:text="vegan"/>
+                    android:text="vegan"/>
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
