--- a/app/src/main/res/navigation/my_navigation.xml
+++ b/app/src/main/res/navigation/my_navigation.xml
@@ -26,7 +26,11 @@
         android:id="@+id/favoriteRecipesFragment"
         android:name="rachmanforniandi.awesomecuisine.ui.fragments.FavoriteRecipesFragment"
         android:label="Favorite Recipes"
-        tools:layout="@layout/fragment_favorite_recipes" />
+        tools:layout="@layout/fragment_favorite_recipes" >
+        <action
+            android:id="@+id/action_favoriteRecipesFragment_to_detailsActivity"
+            app:destination="@id/detailsActivity" />
+    </fragment>
 
     <fragment
         android:id="@+id/foodJokeFragment"
