--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundColor"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragments.OverviewFragment">
 
@@ -85,7 +86,7 @@
         android:textSize="24sp"
         android:textStyle="bold"
         android:fontFamily="@font/courgette"
-        android:textColor="@color/darkGray"
+        android:textColor="@color/titleColor"
         app:layout_constraintTop_toBottomOf="@id/img_main_overview"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
@@ -98,7 +99,7 @@
         android:src="@drawable/ic_checkmark"
         app:layout_constraintStart_toStartOf="@+id/tv_title_recipe"
         app:layout_constraintTop_toBottomOf="@+id/tv_title_recipe"
-        app:tint="@color/darkGray" />
+        app:tint="@color/itemColor" />
 
     <TextView
         android:id="@+id/tv_vegetarian"
@@ -106,7 +107,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="@string/vegetarian"
-        android:textColor="@color/darkGray"
+        android:textColor="@color/itemColor"
         app:layout_constraintBottom_toBottomOf="@+id/img_vegetarian"
         app:layout_constraintStart_toEndOf="@+id/img_vegetarian"
         app:layout_constraintTop_toTopOf="@+id/img_vegetarian" />
@@ -119,7 +120,7 @@
         android:src="@drawable/ic_checkmark"
         app:layout_constraintStart_toStartOf="@+id/img_vegetarian"
         app:layout_constraintTop_toBottomOf="@+id/img_vegetarian"
-        app:tint="@color/darkGray" />
+        app:tint="@color/itemColor" />
 
     <TextView
         android:id="@+id/tv_vegan"
@@ -127,7 +128,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="@string/vegan"
-        android:textColor="@color/darkGray"
+        android:textColor="@color/itemColor"
         app:layout_constraintBottom_toBottomOf="@+id/img_vegan"
         app:layout_constraintStart_toEndOf="@+id/img_vegan"
         app:layout_constraintTop_toTopOf="@+id/img_vegan" />
@@ -141,7 +142,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/tv_vegetarian"
         app:layout_constraintStart_toEndOf="@+id/tv_vegetarian"
         app:layout_constraintTop_toTopOf="@+id/tv_vegetarian"
-        app:tint="@color/darkGray" />
+        app:tint="@color/itemColor" />
 
     <TextView
         android:id="@+id/tv_gluten_free"
@@ -149,7 +150,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="@string/gluten_free"
-        android:textColor="@color/darkGray"
+        android:textColor="@color/itemColor"
         app:layout_constraintBottom_toBottomOf="@+id/img_gluten_free"
         app:layout_constraintStart_toEndOf="@+id/img_gluten_free"
         app:layout_constraintTop_toTopOf="@+id/img_gluten_free" />
@@ -162,7 +163,7 @@
         android:src="@drawable/ic_checkmark"
         app:layout_constraintStart_toStartOf="@+id/img_gluten_free"
         app:layout_constraintTop_toBottomOf="@+id/img_gluten_free"
-        app:tint="@color/darkGray" />
+        app:tint="@color/itemColor" />
 
     <TextView
         android:id="@+id/tv_dairy_free"
@@ -170,7 +171,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="@string/dairy_free"
-        android:textColor="@color/darkGray"
+        android:textColor="@color/itemColor"
         app:layout_constraintBottom_toBottomOf="@+id/img_dairy_free"
         app:layout_constraintStart_toEndOf="@+id/img_dairy_free"
         app:layout_constraintTop_toTopOf="@+id/img_dairy_free" />
@@ -184,7 +185,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/tv_gluten_free"
         app:layout_constraintStart_toEndOf="@+id/tv_gluten_free"
         app:layout_constraintTop_toTopOf="@+id/tv_gluten_free"
-        app:tint="@color/darkGray" />
+        app:tint="@color/itemColor" />
 
     <TextView
         android:id="@+id/tv_healthy"
@@ -192,7 +193,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="@string/healthy"
-        android:textColor="@color/darkGray"
+        android:textColor="@color/itemColor"
         app:layout_constraintBottom_toBottomOf="@+id/img_healthy"
         app:layout_constraintStart_toEndOf="@+id/img_healthy"
         app:layout_constraintTop_toTopOf="@+id/img_healthy" />
@@ -205,7 +206,7 @@
         android:src="@drawable/ic_checkmark"
         app:layout_constraintStart_toStartOf="@+id/img_healthy"
         app:layout_constraintTop_toBottomOf="@+id/img_healthy"
-        app:tint="@color/darkGray" />
+        app:tint="@color/itemColor" />
 
     <TextView
         android:id="@+id/tv_cheap"
@@ -213,7 +214,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:text="@string/cheap"
-        android:textColor="@color/darkGray"
+        android:textColor="@color/itemColor"
         app:layout_constraintBottom_toBottomOf="@+id/img_cheap"
         app:layout_constraintStart_toEndOf="@+id/img_cheap"
         app:layout_constraintTop_toTopOf="@+id/img_cheap" />
