--- a/app/src/main/res/layout/item_recipes.xml
+++ b/app/src/main/res/layout/item_recipes.xml
@@ -14,7 +14,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:cardCornerRadius="12dp"
-        app:strokeColor="@color/mediumGray"
+        app:strokeColor="@color/strokeColor"
         app:strokeWidth="1dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -25,7 +25,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white">
+            android:background="@color/cardBackgroundColor">
 
             <ImageView
                 android:id="@+id/img_Recipes"
