--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/backgroundColor"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:layoutDescription="@xml/fragment_overview_scene"
     tools:context=".ui.fragments.OverviewFragment">
 
     <!-- TODO: Update blank fragment layout -->
@@ -13,10 +14,10 @@
         android:layout_width="0dp"
         android:layout_height="250dp"
         android:scaleType="centerCrop"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:src="@tools:sample/avatars"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@tools:sample/avatars" />
 
     <View
         android:id="@+id/gradient_overlay_overview"
@@ -24,10 +25,10 @@
         android:layout_height="100dp"
         android:background="@drawable/gradient_overlay"
         app:layout_constraintBottom_toBottomOf="@id/img_main_overview"
-        app:layout_constraintStart_toStartOf="@id/img_main_overview"
         app:layout_constraintEnd_toEndOf="@id/img_main_overview"
+        app:layout_constraintStart_toStartOf="@id/img_main_overview"
         app:layout_constraintTop_toTopOf="@id/img_main_overview"
-        app:layout_constraintVertical_bias="1.0"/>
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/tv_time"
@@ -40,17 +41,17 @@
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/img_main_overview"
-        app:layout_constraintEnd_toEndOf="@id/gradient_overlay_overview"/>
+        app:layout_constraintEnd_toEndOf="@id/gradient_overlay_overview" />
 
     <ImageView
         android:id="@+id/img_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_clock"
-        app:tint="@color/white"
         app:layout_constraintBottom_toTopOf="@id/tv_time"
         app:layout_constraintEnd_toEndOf="@id/tv_time"
-        app:layout_constraintStart_toStartOf="@id/tv_time"/>
+        app:layout_constraintStart_toStartOf="@id/tv_time"
+        app:tint="@color/white" />
 
 
     <TextView
@@ -63,17 +64,17 @@
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/tv_time"
-        app:layout_constraintEnd_toStartOf="@id/tv_time"/>
+        app:layout_constraintEnd_toStartOf="@id/tv_time" />
 
     <ImageView
         android:id="@+id/img_like"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_heart"
-        app:tint="@color/white"
         app:layout_constraintBottom_toTopOf="@id/tv_likes"
         app:layout_constraintEnd_toEndOf="@id/tv_likes"
-        app:layout_constraintStart_toStartOf="@id/tv_likes"/>
+        app:layout_constraintStart_toStartOf="@id/tv_likes"
+        app:tint="@color/white" />
 
     <TextView
         android:id="@+id/tv_title_recipe"
@@ -82,14 +83,14 @@
         android:layout_marginStart="12dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="12dp"
+        android:fontFamily="@font/courgette"
         android:text="Title Recipe"
+        android:textColor="@color/titleColor"
         android:textSize="24sp"
         android:textStyle="bold"
-        android:fontFamily="@font/courgette"
-        android:textColor="@color/titleColor"
-        app:layout_constraintTop_toBottomOf="@id/img_main_overview"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/img_main_overview" />
 
     <ImageView
         android:id="@+id/img_vegetarian"
@@ -220,6 +221,7 @@
         app:layout_constraintTop_toTopOf="@+id/img_cheap" />
 
     <ScrollView
+        android:id="@+id/scrollView4"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginStart="12dp"
@@ -229,10 +231,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/img_vegan">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
             <TextView
                 android:id="@+id/tv_summary"
                 android:layout_width="match_parent"
@@ -241,4 +245,4 @@
                 android:textSize="16sp" />
         </LinearLayout>
     </ScrollView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.motion.widget.MotionLayout>
