fix foodJoke binding & improve handling error recipes & favorite recipes page done.

--- a/app/src/main/res/layout/item_recipes_favorite.xml
+++ b/app/src/main/res/layout/item_recipes_favorite.xml
@@ -99,7 +99,7 @@
                     android:id="@+id/heart_txt_value_fav"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    setNumberOfLikes="@{favoritesEntity.result.aggregateLikes}"
+                    android:text="@{String.valueOf(favoritesEntity.result.aggregateLikes)}"
                     app:layout_constraintStart_toStartOf="@id/txt_description_recipe_fav"
                     app:layout_constraintTop_toBottomOf="@id/img_heart_fav"
                     android:textAlignment="center"
@@ -123,7 +123,7 @@
                     android:id="@+id/clock_txt_value_fav"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    setNumberOfMinutes="@{favoritesEntity.result.readyInMinutes}"
+                    android:text="@{String.valueOf(favoritesEntity.result.readyInMinutes)}"
                     android:layout_marginStart="24dp"
                     app:layout_constraintStart_toEndOf="@id/heart_txt_value_fav"
                     app:layout_constraintTop_toBottomOf="@id/img_clock"
