--- a/app/src/main/res/layout/fragment_recipes.xml
+++ b/app/src/main/res/layout/fragment_recipes.xml
@@ -108,8 +108,8 @@
             android:textSize="18sp"
             android:textStyle="bold"
             android:visibility="invisible"
-            readApiResponseForText="@{mainViewModel.recipesResponse}"
-            readDatabaseForText="@{mainViewModel.readRecipesLocal}"
+            readApiResponse="@{mainViewModel.recipesResponse}"
+            readDatabase="@{mainViewModel.readRecipesLocal}"
             app:layout_constraintEnd_toEndOf="@id/img_error"
             app:layout_constraintStart_toStartOf="@id/img_error"
             app:layout_constraintTop_toBottomOf="@id/img_error" />
