--- a/app/src/main/res/navigation/my_navigation.xml
+++ b/app/src/main/res/navigation/my_navigation.xml
@@ -44,7 +44,9 @@
         tools:layout="@layout/fragment_recipes_bottom_sheet" >
         <action
             android:id="@+id/action_recipesBottomSheetFragment_to_recipesFragment"
-            app:destination="@id/recipesFragment" />
+            app:destination="@id/recipesFragment"
+            app:popUpTo="@id/recipesFragment"
+            app:popUpToInclusive="true"/>
     </dialog>
     <activity
         android:id="@+id/detailsActivity"
