--- a/app/src/main/res/layout/fragment_recipes.xml
+++ b/app/src/main/res/layout/fragment_recipes.xml
@@ -17,7 +17,7 @@
         tools:context=".ui.fragments.RecipesFragment">
 
         <!-- TODO: Update blank fragment layout -->
-        <!-- <com.facebook.shimmer.ShimmerFrameLayout
+         <com.facebook.shimmer.ShimmerFrameLayout
              android:id="@+id/shimmerFrameLayout"
              android:layout_width="0dp"
              android:layout_height="0dp"
@@ -39,10 +39,10 @@
 
                  <include layout="@layout/placeholder_row_layout" />
              </LinearLayout>
-         </com.facebook.shimmer.ShimmerFrameLayout>-->
+         </com.facebook.shimmer.ShimmerFrameLayout>
 
-        <!--<androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/list_item_recipe"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/listItemRecipe"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:visibility="gone"
@@ -51,9 +51,9 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:listitem="@layout/item_recipes"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>-->
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
-        <com.todkars.shimmer.ShimmerRecyclerView
+        <!--<com.todkars.shimmer.ShimmerRecyclerView
             android:id="@+id/listItemRecipe"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -66,7 +66,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />-->
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/recipes_fab"
