--- a/app/src/main/res/layout/fragment_recipes_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_recipes_bottom_sheet.xml
@@ -255,6 +255,7 @@
         android:text="@string/apply"
         android:textColor="@color/white"
         android:textAllCaps="false"
+        android:backgroundTint="@color/colorPrimary"
         app:layout_constraintTop_toBottomOf="@id/dietTypeScrollView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
